--- a/scss/main.scss
+++ b/scss/main.scss
@@ -205,6 +205,9 @@
       fill: rgba(himig.token-get-raw('surface-400'), 50%),
       border: rgba(0 0 0 / 0)
     ),
+    $struct: (
+      padding: 'lg'
+    ),
     $typography: (
       family: (
         title: 'title',
@@ -219,29 +222,8 @@
   );
 
   .ms-card {
-    --easing: cubic-bezier(0.83, 0, 0.17, 1);
-    position: relative;
-    border-radius: 0.5rem;
-    overflow: hidden;
-    transition: box-shadow 0.2s ease;
-
     &:hover {
       box-shadow: 0 5px 40px rgba(#fff, 0.1);
-
-      .ms-card__media img {
-        -webkit-filter: grayscale(0);
-        filter: grayscale(0);
-      }
-
-      @include himig.breakpoint-create('large') {
-        &:has(.ms-card__media img) {
-          .ms-card__details {
-            bottom: 0;
-            transform: translateY(0);
-            opacity: 1;
-          }
-        }
-      }
     }
 
     .ms-card__media {
@@ -253,62 +235,13 @@
         height: 100%;
         aspect-ratio: var(--ms-card-aspect-ratio, 16 / 8);
         transition: all 0.4s ease;
-        -webkit-filter: grayscale(100%);
         object-fit: cover;
         object-position: center;
-
-        @include himig.breakpoint-create('large') {
-          --ms-card-aspect-ratio: 16 / 10;
-        }
       }
     }
 
-    .ms-card__header {
-      padding-bottom: 0 !important;
-
-      .ms-card__title {
-        letter-spacing: himig.to-rem(-1px);
-      }
-    }
-
-    &:has(.ms-card__media img) {
-      .ms-card__details {
-        height: auto !important;
-        display: flex;
-        flex-flow: column nowrap;
-        justify-content: flex-start;
-        transform-origin: bottom;
-
-        @include himig.breakpoint-create('large') {
-          position: absolute;
-          right: 0;
-          bottom: -100%;
-          left: 0;
-          opacity: 0;
-          transform: translateY(100%);
-          transition: all 0.3s var(--easing);
-          background: linear-gradient(180deg,
-            rgba(himig.token-get-raw('surface-800'), 0%) 0%,
-            rgba(himig.token-get-raw('surface-800'), 50%) 15%,
-            rgba(himig.token-get-raw('surface-800'), 70%) 30%,
-            rgba(himig.token-get-raw('surface-800'), 90%) 70%,
-            rgba(himig.token-get-raw('surface-800'), 100%) 100%
-          );
-
-          .ms-card__header {
-            padding-block-end: 0 !important;
-          }
-        }
-      }
-    }
-
-    .ms-card__details {
-      height: 100%;
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: space-between;
-      transition: all 0.8s var(--easing);
-      will-change: transform;
+    .ms-card__content {
+      --ms-card-padding: 0 #{himig.primitive-token-get('padding.lg')};
     }
 
     .ms-card__tags {
