--- a/scss/main.scss
+++ b/scss/main.scss
@@ -202,7 +202,7 @@
 
   @include ms-card.render(
     $color: (
-      fill: rgba(himig.token-get-raw('surface-400'), 50%),
+      fill: 'surface-800',
       border: rgba(0 0 0 / 0)
     ),
     $struct: (
@@ -224,20 +224,6 @@
   .ms-card {
     &:hover {
       box-shadow: 0 5px 40px rgba(#fff, 0.1);
-    }
-
-    .ms-card__media {
-      height: auto;
-      max-height: 100%;
-
-      img {
-        width: 100%;
-        height: 100%;
-        aspect-ratio: var(--ms-card-aspect-ratio, 16 / 8);
-        transition: all 0.4s ease;
-        object-fit: cover;
-        object-position: center;
-      }
     }
 
     .ms-card__content {
