--- a/scss/main.scss
+++ b/scss/main.scss
@@ -68,6 +68,10 @@
   )
 ) {
   #__next {
+    min-height: 100svh;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
     overflow-x: clip;
     position: relative;
   }
