--- a/scss/page/home/_technologies.scss
+++ b/scss/page/home/_technologies.scss
@@ -4,7 +4,7 @@
   #skills-and-technologies__wrapper {
     width: calc(100% - 50px);
     height: 100%;
-    max-width: himig.token-get('viewport-layout-limit');
+    max-width: himig.token-get('viewport-content-limit');
     border-radius: himig.primitive-token-get('radius.xl');
     overflow: hidden;
     background: radial-gradient(circle at -10% 50%, rgb(from himig.token-get('accent-400') r g b / 33%) 0%, transparent 100%);
