--- a/scss/components/_ms-navbar.scss
+++ b/scss/components/_ms-navbar.scss
@@ -56,10 +56,9 @@
       gap: 0.5rem;
       justify-content: flex-end;
       backdrop-filter: var(--backdrop-filter, blur(10px));
-      -webkit-backdrop-filter: var(--backdrop-filter, blur(10px));
       @include himig.color-apply('navbar-wrapper', (
-        fill: 'primary-600',
-        border: 'primary-400'
+        fill: rgb(from himig.token-get('surface-400') r g b / 33%),
+        border: rgb(from himig.token-get('surface-400') r g b / 33%)
       ));
       @include himig.struct-apply('navbar-wrapper', (
         padding: 'lg',
