--- a/scss/components/_ms-header.scss
+++ b/scss/components/_ms-header.scss
@@ -18,7 +18,7 @@ $header-style: 'default' !default;
     @include himig.struct-apply('header', (
       width: (
         default: calc((100% - 50px) + 2em),
-        max: calc(#{himig.token-get('viewport-content-limit')} + 2em)
+        max: calc(#{himig.token-get('viewport-layout-limit')} + 2em)
       )
     ));
     min-height: 56px;
