--- a/scss/main.scss
+++ b/scss/main.scss
@@ -438,4 +438,13 @@ $ms-material-light: (
       background-position: -10% 10%;
     }
   }
+
+  @keyframes loop {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-50%);
+    }
+  }
 }
