--- a/scss/_utils.scss
+++ b/scss/_utils.scss
@@ -58,7 +58,7 @@
   }
 
   .big-ass-text {
-    font-size: clamp(himig.to-rem(56px), 15vw, himig.to-rem(157px));
+    font-size: clamp(himig.to-rem(56px), 15vw, himig.to-rem(146px));
     line-height: 1.15;
   }
 
@@ -112,7 +112,7 @@
   }
 
   .letter-spacing-condensed {
-    letter-spacing: himig.to-rem(-2px);
+    letter-spacing: himig.to-rem(-1px);
     font-stretch: condensed;
   }
 
@@ -170,6 +170,18 @@
 
     * {
       will-change: transform;
+    }
+  }
+
+  .wrap-brackets {
+    &::before {
+      content: '[';
+      margin-inline-end: 0.15rem;
+    }
+
+    &::after {
+      content: ']';
+      margin-inline-start: 0.15rem;
     }
   }
 }
