--- a/scss/page/home/_index.scss
+++ b/scss/page/home/_index.scss
@@ -1,12 +1,8 @@
 @use 'pkg:@matteusan/himig';
-@use 'stuff-i-do';
+@use 'services';
 @use 'cta';
 
 @mixin render() {
-  .is-fullscreen {
-    min-height: 100svh;
-  }
-
   .picture-frame {
     --easing: cubic-bezier(0.83, 0, 0.17, 1);
     width: min(calc(100% - 250px), 157px);
@@ -15,7 +11,6 @@
     min-height: 100px;
     display: grid;
     place-items: center;
-    // border: 2px solid himig.token-get('primary-300');
     border-radius: himig.primitive-token-get('radius.lg');
     overflow: hidden;
     user-select: none;
@@ -35,6 +30,6 @@
     }
   }
 
-  @include stuff-i-do.render();
+  @include services.render();
   @include cta.render();
 }
