--- a/scss/components/_ms-navbar.scss
+++ b/scss/components/_ms-navbar.scss
@@ -61,6 +61,7 @@
         ink: 'surface-ink',
         border: 'surface-400'
       ));
+      mix-blend-mode: difference;
       @include himig.struct-apply('navbar-item', (
         radius: 'sm',
         border-width: 'xs',
