--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,7 +36,7 @@ $ms-material-light: (
   400: hsl(40, 4%, 72%),
   600: hsl(60, 2%, 54%),
   800: hsl(40, 2%, 37%),
-  'ink': #111010,
+  'ink': #111010
 );
 
 @include himig.init(
